blog alignment issue

--- a/src/components/postList/postlist.module.scss
+++ b/src/components/postList/postlist.module.scss
@@ -22,6 +22,7 @@
   & > a {
     * {
       min-height: 258px;
+      max-height: 258px;
       img {
         border-radius: 8px;
       }
