--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -305,6 +305,13 @@ section {
     font-weight: 700;
     color: #231f20;
     letter-spacing: 0.1px;
+    @media (min-width: 767px) {
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      min-height: 62.5px;
+    }
   }
   &-breadcrumb {
     display: inline-flex;
@@ -372,6 +379,19 @@ section {
       display: flex;
       font-size: 0.75rem;
       line-height: 1.2em;
+    }
+  }
+  &.post {
+    .bf-post-link {
+      p {
+        @media (min-width: 767px) {
+          display: -webkit-box;
+          -webkit-line-clamp: 3;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          min-height: 62.5px;
+        }
+      }
     }
   }
 }
