--- a/src/templates/templates.module.scss
+++ b/src/templates/templates.module.scss
@@ -146,7 +146,10 @@
       margin-left: 0;
     }
     table {
-      word-break: break-all;
+      word-break: inherit;
+      a {
+        word-break: break-all;
+      }
     }
   }
 }
